# tagalog-flashcard

./: README.md
tagalog-flashcards-qt/: CMakeLists.txt  flashcard.cpp  flashcard.h  flashcardsystem.cpp  flashcardsystem.h  flashcardwindow.cpp  flashcardwindow.h  flashcardwindow.ui  flipbutton.cpp  flipbutton.h  main.cpp  random_selector.h  resources.qrc  test.json
tagalog-flashcards-qt/src/: clearLayout.h  flashcard.cpp  flashcardwindow.cpp  flashcardwindow.h  flipbutton.cpp  flipbutton.h  main.cpp
